--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ERROR: No README.md file found!",
   "main": "app.js",
   "dependencies": {
-    "connect-assets": "~2.3.3",
+    "connect-assets": "",
     "express": "~3.1.0",
     "stylus": "~0.32.0",
     "jade": "~0.28.1"
