engine object in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "Hangout",
   "version": "0.0.0",
   "description": "ERROR: No README.md file found!",
+  "engines": {
+    "node": "0.8.19",
+    "npm": "1.2.10"
+  },
   "main": "app.js",
   "dependencies": {
     "connect-assets": "",
